Write tests for DataFetchers #510